--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <!--<span class="badge">NEW</span>-->
         <div class="product-card">
-      <img src="../imagen/Creatina/1.jpeg" alt="Top Vital Seamless" class="product-img" />
+      <img src="./imagen/Creatina/1.jpeg" alt="Top Vital Seamless" class="product-img" />
       <div class="product-info">
 
         <!-- Botón de compra -->
@@ -177,7 +177,7 @@
 
           <!-- Producto 1 -->
     <div class="product-card">
-      <img src="../imagen/BCAA/1.jpeg" alt="Wrist Straps" class="product-img" />
+      <img src="./imagen/BCAA/1.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
         <p>Sin Sabor</p>
            <a href="https://wa.link/9007d3" class="buy-button">  🛒 Comprar Ahora
@@ -192,7 +192,7 @@
 
 
       <div class="product-card">
-      <img src="../imagen/Creatina/9.jpeg" alt="Wrist Straps" class="product-img" />
+      <img src="./imagen/Creatina/9.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
                 <p>Fresa</p>
                 <a href="https://wa.link/9007d3" class="buy-button">  🛒 Comprar Ahora
@@ -204,7 +204,7 @@
       </div>
 
            <div class="product-card">
-      <img src="../imagen/Multivitamina/13.jpeg" alt="Wrist Straps" class="product-img" />
+      <img src="./imagen/Multivitamina/13.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
          <p>Centrum</p>
                 <a href="https://wa.link/9007d3" class="buy-button">
@@ -217,7 +217,7 @@
       </div>
 
              <div class="product-card">
-      <img src="../imagen/Magnesio/8.jpeg" alt="Wrist Straps" class="product-img" />
+      <img src="./imagen/Magnesio/8.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
         <p>Bronson</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
