--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
           <div class="product-card">
-      <img src="../imagen/Pre-Entreno/4.jpeg" alt="Wrist Straps" class="product-img" />
+      <img src="./imagen/Pre-Entreno/4.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
 
 
