--- a/Suplementos/BCAA O EAA.HTML
+++ b/Suplementos/BCAA O EAA.HTML
@@ -55,238 +55,238 @@
     <div class="product-card">
       <img src="../imagen/BCAA/1.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sin Sabor</p>
+        <p class="tituloo">Sin Sabor</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost EAA Powder 30 porciones Aminoácidos esenciales, sin OMG, sin gluten</span>
-        <p><strong>$1.790</strong></p>
+        <p class="tituloo"><strong>$1.790</strong></p>
       </div>
     
 
      <div class="product-card">
       <img src="../imagen/BCAA/2.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Frambuesa Azul</p>
+        <p class="tituloo">Frambuesa Azul</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales, sin OMG, sin gluten</span>
-        <p><strong>$1.890</strong></p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
 
 
  <div class="product-card">
       <img src="../imagen/BCAA/3.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>POG</p>
+        <p class="tituloo">POG</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales, sin OMG, sin gluten</span>
-        <p><strong>$1.890</strong></p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
 
 
      <div class="product-card">
       <img src="../imagen/BCAA/4.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Fruit Punch</p>
+        <p class="tituloo">Fruit Punch</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales, sin OMG, sin gluten</span>
-        <p><strong>$1.890</strong></p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     
 
      <div class="product-card">
       <img src="../imagen/BCAA/5.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sin Sabor</p>
+        <p class="tituloo">Sin Sabor</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
    
 
      <div class="product-card">
       <img src="../imagen/BCAA/6.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sin Sabor</p>
+        <p class="tituloo">Sin Sabor</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
   <div class="product-card">
       <img src="../imagen/BCAA/7.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sin Sabor</p>
+        <p class="tituloo">Sin Sabor</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">BCAA Polvo (150 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/8.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Uva</p>
+        <p class="tituloo">Uva</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/9.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Uva</p>
+        <p class="tituloo">Uva</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/10.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Uva</p>
+        <p class="tituloo">Uva</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (90 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
       <div class="product-card">
       <img src="../imagen/BCAA/11.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sandia</p>
+        <p class="tituloo">Sandia</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/12.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sandia</p>
+        <p class="tituloo">Sandia</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/13.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sandia</p>
+        <p class="tituloo">Sandia</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (90 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/14.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Sandia</p>
+        <p class="tituloo">Sandia</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (120 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/15.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Piña</p>
+        <p class="tituloo">Piña</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/16.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Piña</p>
+        <p class="tituloo">Piña</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
       <div class="product-card">
       <img src="../imagen/BCAA/17.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Piña</p>
+        <p class="tituloo">Piña</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (90 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/18.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Fresa Limon</p>
+        <p class="tituloo">Fresa Limon</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/19.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Fresa Limon</p>
+        <p class="tituloo">Fresa Limon</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/20.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Naranja Mango</p>
+        <p class="tituloo">Naranja Mango</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
@@ -294,84 +294,84 @@
       <div class="product-card">
       <img src="../imagen/BCAA/21.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Limonada</p>
+        <p class="tituloo">Limonada</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (90 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/22.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Kiwi</p>
+        <p class="tituloo">Kiwi</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/23.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Kiwi</p>
+        <p class="tituloo">Kiwi</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/24.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Kiwi</p>
+        <p class="tituloo">Kiwi</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (90 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/25.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Manzana Verde</p>
+        <p class="tituloo">Manzana Verde</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/26.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Manzana Verde</p>
+        <p class="tituloo">Manzana Verde</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
       <div class="product-card">
       <img src="../imagen/BCAA/27.jpeg" alt="Wrist Straps" class="product-img" />
       <div class="product-info">
-        <p>Manzana Verde</p>
+        <p class="tituloo">Manzana Verde</p>
                         <a href="https://wa.link/9007d3" class="buy-button">
   🛒 Comprar Ahora
 </a></div>
         <span class="color">Nutricost BCAA Polvo (120 Servicios)</span>
-        <p><strong>$38</strong></p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
 
 
