--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="carousel-container">
   <div class="carousel">
  <div class="product-card">
-      <img src="../imagen/Inferior Hombres/1.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/1.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -157,7 +157,7 @@
 
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/2.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/2.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -169,7 +169,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/3.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/3.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -181,7 +181,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/4.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/4.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -193,7 +193,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/5.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/5.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -205,7 +205,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/6.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/6.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -217,7 +217,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/7.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/7.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -229,7 +229,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/8.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/8.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -241,7 +241,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/9.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/9.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -253,7 +253,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/10.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/10.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -265,7 +265,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/11.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/11.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -277,7 +277,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/12.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/12.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -289,7 +289,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/13.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/13.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -301,7 +301,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/14.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/14.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -313,7 +313,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/15.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/15.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -325,7 +325,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/16.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/16.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -337,7 +337,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/17.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/17.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -349,7 +349,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/18.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/18.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -361,7 +361,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/19.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/19.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -373,7 +373,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/20.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/20.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -385,7 +385,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/21.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/21.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -397,7 +397,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/22.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/22.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -409,7 +409,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/23.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/23.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -421,7 +421,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/24.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/24.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -434,7 +434,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/25.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/25.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -447,7 +447,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/26.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/26.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -460,7 +460,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/27.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/27.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -473,7 +473,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/28.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/28.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
