--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/1.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Sin Sabor</p>
-        <span class="color">Nutricost EAA Powder 30 porciones Aminoácidos esenciales, sin OMG</span>
-        <p><strong>$1.790</strong></p>
+        <p class="tituloo">Sin Sabor</p>
+       <p class="tituloo"><strong>$1.790</strong></p>
       </div>
     </div>
 
@@ -54,9 +53,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/2.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Frambuesa Azul</p>
-        <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales</span>
-        <p><strong>$1.890</strong></p>
+        <p class="tituloo">Frambuesa Azul</p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
 
@@ -64,9 +62,8 @@
   <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/3.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>POG</p>
-        <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales</span>
-        <p><strong>$1.890</strong></p>
+        <p class="tituloo">POG</p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
 
@@ -74,9 +71,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/4.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Fruit Punch</p>
-        <span class="color">Nutricost EAA Powder 30 porciones  Aminoácidos esenciales</span>
-        <p><strong>$1.890</strong></p>
+       <p class="tituloo">Fruit Punch</p>
+       <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
 
@@ -84,9 +80,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/5.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Sin Sabor</p>
-        <span class="color">BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+       <p class="tituloo">Sin Sabor</p>
+       <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -94,9 +89,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/6.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Sin Sabor</p>
-        <span class="color">BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+       <p class="tituloo">Sin Sabor</p>
+       <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -104,9 +98,8 @@
     <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/7.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Sin Sabor</p>
-        <span class="color">BCAA Polvo (150 Servicios)</span>
-        <p><strong>$38</strong></p>
+       <p class="tituloo">Sin Sabor</p>
+       <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -114,9 +107,8 @@
         <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/8.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Uva</p>
-        <span class="color">Nutricost BCAA Polvo (30 Servicios)</span>
-        <p><strong>$38</strong></p>
+       <p class="tituloo">Uva</p>
+       <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -124,9 +116,8 @@
         <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/9.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p>Uva</p>
-        <span class="color">Nutricost BCAA Polvo (60 Servicios)</span>
-        <p><strong>$38</strong></p>
+       <p class="tituloo">Uva</p>
+       <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
   </div>
@@ -139,7 +130,7 @@
                                                                     
 
     <div class="tituloo">
-    <p>Ropas</p>
+   <p class="tituloo">Ropas</p>
     </div>
       <div class="carousel-container">
   <div class="carousel">
@@ -148,10 +139,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -161,10 +151,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -173,10 +162,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -185,10 +173,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -197,10 +184,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -209,10 +195,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -221,10 +206,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -233,10 +217,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -245,10 +228,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -257,10 +239,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -269,10 +250,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -281,10 +261,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -293,10 +272,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -305,10 +283,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -317,10 +294,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -329,10 +305,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -341,10 +316,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -353,10 +327,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -365,10 +338,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -377,10 +349,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -389,10 +360,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -401,10 +371,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -413,10 +382,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -425,10 +393,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -438,10 +405,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -451,10 +417,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -464,10 +429,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
 
@@ -477,10 +441,9 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-         <p>S M L XL</p>
+        <p class="tituloo">S M L XL</p>
 
 </a></div>
-        <span class="color">Tallas Aceite de pescado omega 3 - 2400 MG, 120 cápsulas blandas (40 porciones)</span>
         <p class="precio-anterior"><strong>$20</strong></p>
         <p class="tituloo"><strong>$38</strong></p>
       </div>
