--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/1.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p class="tituloo">Sin Sabor</p>
-       <p class="tituloo"><strong>$1.790</strong></p>
+        <p>Sin Sabor</p>
+        <p class="tituloo"><strong>$1.790</strong></p>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/2.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p class="tituloo">Frambuesa Azul</p>
+        <p>Frambuesa Azul</p>
         <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
@@ -62,7 +62,7 @@
   <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/3.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-        <p class="tituloo">POG</p>
+        <p>POG</p>
         <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
@@ -71,8 +71,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/4.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Fruit Punch</p>
-       <p class="tituloo"><strong>$1.890</strong></p>
+        <p>Fruit Punch</p>
+        <p class="tituloo"><strong>$1.890</strong></p>
       </div>
     </div>
 
@@ -80,8 +80,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/5.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Sin Sabor</p>
-       <p class="tituloo"><strong>$38</strong></p>
+        <p>Sin Sabor</p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -89,8 +89,8 @@
       <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/6.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Sin Sabor</p>
-       <p class="tituloo"><strong>$38</strong></p>
+        <p>Sin Sabor</p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -98,8 +98,8 @@
     <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/7.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Sin Sabor</p>
-       <p class="tituloo"><strong>$38</strong></p>
+        <p>Sin Sabor</p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -107,8 +107,8 @@
         <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/8.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Uva</p>
-       <p class="tituloo"><strong>$38</strong></p>
+        <p>Uva</p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
 
@@ -116,8 +116,8 @@
         <a  href="./Suplementos/BCAA O EAA.HTML">
       <img src="./imagen/BCAA/9.jpeg" alt="Wrist Straps" class="product-info" /></a>
       <div class="product-info">
-       <p class="tituloo">Uva</p>
-       <p class="tituloo"><strong>$38</strong></p>
+        <p>Uva</p>
+        <p class="tituloo"><strong>$38</strong></p>
       </div>
     </div>
   </div>
@@ -130,7 +130,7 @@
                                                                     
 
     <div class="tituloo">
-   <p class="tituloo">Ropas</p>
+    <p>Ropas</p>
     </div>
       <div class="carousel-container">
   <div class="carousel">
@@ -139,7 +139,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -151,7 +151,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -162,7 +162,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -173,7 +173,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -184,7 +184,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -195,7 +195,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -206,7 +206,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -217,7 +217,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -228,7 +228,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -239,7 +239,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -250,7 +250,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -261,7 +261,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -272,7 +272,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -283,7 +283,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -294,7 +294,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -305,7 +305,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -316,7 +316,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -327,7 +327,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -338,7 +338,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -349,7 +349,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -360,7 +360,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -371,7 +371,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -382,7 +382,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -393,7 +393,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -405,7 +405,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -417,7 +417,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -429,7 +429,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="tituloo"><strong>$38</strong></p>
@@ -441,7 +441,7 @@
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
-        <p class="tituloo">S M L XL</p>
+         <p>S M L XL</p>
 
 </a></div>
         <p class="precio-anterior"><strong>$20</strong></p>
